Add slide out navbar for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 :root {
-  --divider-color: #979797;
+  --color-white: #fff;
+  --color-background: #070724;
+  --color-hover: #838391;
+  --color-mercury: #419ebb;
+  --color-venus: #eda249;
+  --color-earth: #6f2ed6;
+  --color-mars: #d14c32;
+  --color-jupiter: #d83a34;
+  --color-saturn: #cd5120;
+  --color-uranus: #1ec2a4;
+  --color-neptune: #2d68f0;
+  --color-divider: rgba(151, 151, 151, 0.2);
 }
