--- a/src/layouts/app-shell.module.css
+++ b/src/layouts/app-shell.module.css
@@ -7,8 +7,7 @@
 nav {
   grid-column: 1 / 13;
   height: 69px;
-  border-bottom: 1px solid var(--divider-color);
-  background-color: blue;
+  border-bottom: 1px solid var(--color-divider);
 }
 
 main {
