--- a/src/layouts/app-shell.module.css
+++ b/src/layouts/app-shell.module.css
@@ -1,3 +1,4 @@
+/* Layout */
 .container {
   display: grid;
   grid-template-columns: repeat(12, minmax(0, 1fr));
@@ -7,7 +8,6 @@
 nav {
   grid-column: 1 / 13;
   height: 69px;
-  border-bottom: 1px solid var(--color-divider);
 }
 
 main {
