--- a/src/layouts/app-shell.module.css
+++ b/src/layouts/app-shell.module.css
@@ -5,6 +5,73 @@
   grid-template-rows: auto 1fr auto;
 }
 
+.stars {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 1px;
+  width: 1px;
+  border-radius: 50%;
+  animation: zoom 10s alternate infinite;
+  box-shadow: -10vw 1vh 3px 0px var(--color-star), -28vw -35vh 0px 2px var(--color-star), 19vw 22vh 1px 0px var(--color-star), 26vw -12vh 1px 0px var(--color-star), 45vw -27vh 0px 3px var(--color-star), 39vw 35vh 3px 0px var(--color-star),
+    -8vw -31vh 1px 3px var(--color-star), -26vw -36vh 0px 3px var(--color-star), 22vw 24vh 2px 3px var(--color-star), -30vw 33vh 2px 3px var(--color-star), 50vw 13vh 3px 1px var(--color-star), 8vw -50vh 2px 1px var(--color-star),
+    14vw 11vh 0px 1px var(--color-star), -34vw -42vh 2px 2px var(--color-star), -26vw 36vh 0px 1px var(--color-star), 9vw -50vh 2px 3px var(--color-star), 37vw 37vh 1px 1px var(--color-star), 13vw -38vh 3px 2px var(--color-star),
+    44vw 23vh 3px 0px var(--color-star), -34vw 44vh 3px 3px var(--color-star), -15vw 5vh 1px 2px var(--color-star), -29vw 46vh 1px 1px var(--color-star), 11vw -9vh 2px 0px var(--color-star), 0vw 11vh 0px 3px var(--color-star),
+    49vw 14vh 1px 0px var(--color-star), -39vw -8vh 0px 0px var(--color-star), -26vw 39vh 2px 3px var(--color-star), 7vw -4vh 2px 2px var(--color-star), -8vw 43vh 3px 1px var(--color-star), -43vw 33vh 1px 0px var(--color-star),
+    -1vw -24vh 2px 3px var(--color-star), -4vw 39vh 2px 0px var(--color-star), 18vw 36vh 1px 3px var(--color-star), 42vw 11vh 2px 0px var(--color-star), -4vw 0vh 1px 2px var(--color-star), -35vw -6vh 2px 0px var(--color-star),
+    36vw 23vh 3px 1px var(--color-star), -37vw -26vh 0px 2px var(--color-star), -18vw 47vh 0px 3px var(--color-star), 4vw -24vh 2px 1px var(--color-star), 12vw 47vh 1px 2px var(--color-star), -37vw -33vh 3px 1px var(--color-star),
+    -26vw 40vh 0px 3px var(--color-star), 39vw -13vh 3px 1px var(--color-star), 3vw -19vh 3px 1px var(--color-star), -17vw 33vh 0px 0px var(--color-star), 34vw -23vh 2px 2px var(--color-star), -41vw 22vh 2px 0px var(--color-star),
+    22vw -29vh 0px 3px var(--color-star), 18vw 46vh 0px 1px var(--color-star), -1vw 13vh 2px 3px var(--color-star), 8vw 1vh 1px 0px var(--color-star), -38vw 36vh 0px 1px var(--color-star), -50vw 0vh 1px 1px var(--color-star),
+    -17vw 27vh 3px 1px var(--color-star), -44vw 32vh 3px 0px var(--color-star), 15vw 50vh 0px 0px var(--color-star), -8vw 41vh 0px 3px var(--color-star), 45vw 4vh 1px 2px var(--color-star), -40vw -13vh 1px 0px var(--color-star),
+    17vw -45vh 3px 1px var(--color-star), -11vw -40vh 0px 1px var(--color-star), 31vw -38vh 0px 3px var(--color-star), -46vw 1vh 2px 0px var(--color-star), 46vw 5vh 0px 0px var(--color-star), -46vw -45vh 1px 0px var(--color-star),
+    -43vw -11vh 1px 3px var(--color-star), 44vw -9vh 2px 2px var(--color-star), 22vw -43vh 1px 2px var(--color-star), 41vw 2vh 2px 0px var(--color-star), -25vw -41vh 1px 1px var(--color-star), 44vw 46vh 1px 2px var(--color-star),
+    -34vw 13vh 1px 2px var(--color-star), 37vw -32vh 1px 0px var(--color-star), -3vw 11vh 2px 2px var(--color-star), 35vw -28vh 0px 1px var(--color-star), -22vw -47vh 2px 3px var(--color-star), -7vw -16vh 2px 0px var(--color-star),
+    49vw 46vh 2px 1px var(--color-star), -45vw 27vh 1px 2px var(--color-star), -6vw -39vh 3px 0px var(--color-star), -13vw 8vh 3px 0px var(--color-star), 38vw 0vh 2px 1px var(--color-star), -36vw 4vh 0px 3px var(--color-star),
+    -29vw -12vh 3px 0px var(--color-star), 45vw -46vh 0px 2px var(--color-star), -50vw -8vh 3px 2px var(--color-star), 20vw -10vh 1px, -10vw 1vh 3px 0px var(--color-star), -28vw -35vh 0px 2px var(--color-star), 19vw 22vh 1px 0px var(--color-star),
+    26vw -12vh 1px 0px var(--color-star), 45vw -27vh 0px 3px var(--color-star), 39vw 35vh 3px 0px var(--color-star), -8vw -31vh 1px 3px var(--color-star), -26vw -36vh 0px 3px var(--color-star), 22vw 24vh 2px 3px var(--color-star),
+    -30vw 33vh 2px 3px var(--color-star), 50vw 13vh 3px 1px var(--color-star), 8vw -50vh 2px 1px var(--color-star), 14vw 11vh 0px 1px var(--color-star), -34vw -42vh 2px 2px var(--color-star), -26vw 36vh 0px 1px var(--color-star),
+    9vw -50vh 2px 3px var(--color-star), 37vw 37vh 1px 1px var(--color-star), 13vw -38vh 3px 2px var(--color-star), 44vw 23vh 3px 0px var(--color-star), -34vw 44vh 3px 3px var(--color-star), -15vw 5vh 1px 2px var(--color-star),
+    -29vw 46vh 1px 1px var(--color-star), 11vw -9vh 2px 0px var(--color-star), 0vw 11vh 0px 3px var(--color-star), 49vw 14vh 1px 0px var(--color-star), -39vw -8vh 0px 0px var(--color-star), -26vw 39vh 2px 3px var(--color-star),
+    7vw -4vh 2px 2px var(--color-star), -8vw 43vh 3px 1px var(--color-star), -43vw 33vh 1px 0px var(--color-star), -1vw -24vh 2px 3px var(--color-star), -4vw 39vh 2px 0px var(--color-star), 18vw 36vh 1px 3px var(--color-star),
+    42vw 11vh 2px 0px var(--color-star), -4vw 0vh 1px 2px var(--color-star), -35vw -6vh 2px 0px var(--color-star), 36vw 23vh 3px 1px var(--color-star), -37vw -26vh 0px 2px var(--color-star), -18vw 47vh 0px 3px var(--color-star),
+    4vw -24vh 2px 1px var(--color-star), 12vw 47vh 1px 2px var(--color-star), -37vw -33vh 3px 1px var(--color-star), -26vw 40vh 0px 3px var(--color-star), 39vw -13vh 3px 1px var(--color-star), 3vw -19vh 3px 1px var(--color-star),
+    -17vw 33vh 0px 0px var(--color-star), 34vw -23vh 2px 2px var(--color-star), -41vw 22vh 2px 0px var(--color-star), 22vw -29vh 0px 3px var(--color-star), 18vw 46vh 0px 1px var(--color-star), -1vw 13vh 2px 3px var(--color-star),
+    8vw 1vh 1px 0px var(--color-star), -38vw 36vh 0px 1px var(--color-star), -50vw 0vh 1px 1px var(--color-star), -17vw 27vh 3px 1px var(--color-star), -44vw 32vh 3px 0px var(--color-star), 15vw 50vh 0px 0px var(--color-star),
+    -8vw 41vh 0px 3px var(--color-star), 45vw 4vh 1px 2px var(--color-star), -40vw -13vh 1px 0px var(--color-star), 17vw -45vh 3px 1px var(--color-star), -11vw -40vh 0px 1px var(--color-star), 31vw -38vh 0px 3px var(--color-star),
+    -46vw 1vh 2px 0px var(--color-star), 46vw 5vh 0px 0px var(--color-star), -46vw -45vh 1px 0px var(--color-star), -43vw -11vh 1px 3px var(--color-star), 44vw -9vh 2px 2px var(--color-star), 22vw -43vh 1px 2px var(--color-star),
+    41vw 2vh 2px 0px var(--color-star), -25vw -41vh 1px 1px var(--color-star), 44vw 46vh 1px 2px var(--color-star), -34vw 13vh 1px 2px var(--color-star), 37vw -32vh 1px 0px var(--color-star), -3vw 11vh 2px 2px var(--color-star),
+    35vw -28vh 0px 1px var(--color-star), -22vw -47vh 2px 3px var(--color-star), -7vw -16vh 2px 0px var(--color-star), 49vw 46vh 2px 1px var(--color-star), -45vw 27vh 1px 2px var(--color-star), -6vw -39vh 3px 0px var(--color-star),
+    -13vw 8vh 3px 0px var(--color-star), 38vw 0vh 2px 1px var(--color-star), -36vw 4vh 0px 3px var(--color-star), -29vw -12vh 3px 0px var(--color-star), 45vw -46vh 0px 2px var(--color-star), -50vw -8vh 3px 2px var(--color-star),
+    20vw -10vh 1px 1px var(--color-star), -16vw -3vh 3px 0px var(--color-star), -28vw -12vh 2px 3px var(--color-star), 34vw 19vh 0px 0px var(--color-star), 11vw -43vh 2px 0px var(--color-star), 34vw -41vh 0px 1px var(--color-star),
+    43vw -18vh 0px 2px var(--color-star), -9vw -46vh 0px 1px var(--color-star), -6vw 43vh 1px 3px var(--color-star), 40vw 26vh 0px 2px var(--color-star), 8vw -13vh 0px 1px var(--color-star), 23vw 30vh 1px 3px var(--color-star),
+    -41vw 14vh 3px 2px var(--color-star), -48vw -45vh 3px 1px var(--color-star), -25vw 1vh 3px 2px var(--color-star), -41vw 4vh 0px 0px var(--color-star), -6vw -25vh 0px 3px var(--color-star), 25vw 8vh 3px 2px var(--color-star),
+    -27vw -43vh 1px 2px var(--color-star), 46vw -21vh 0px 2px var(--color-star), 6vw -2vh 3px 0px var(--color-star), -32vw -30vh 3px 2px var(--color-star), 49vw 47vh 0px 1px var(--color-star), 31vw -19vh 3px 0px var(--color-star),
+    22vw -28vh 2px 0px var(--color-star), -45vw 15vh 3px 3px var(--color-star), -12vw -18vh 2px 3px var(--color-star), 40vw -23vh 3px 2px var(--color-star), 48vw -49vh 2px 2px var(--color-star), -43vw 41vh 2px 0px var(--color-star),
+    -19vw 5vh 1px 0px var(--color-star), 2vw 25vh 2px 0px var(--color-star), 25vw -43vh 1px 0px var(--color-star), 37vw 18vh 1px 0px var(--color-star), 4vw 2vh 3px 0px var(--color-star), 19vw -6vh 1px 1px var(--color-star),
+    -24vw -50vh 2px 0px var(--color-star), 48vw 26vh 2px 3px var(--color-star), -27vw -33vh 3px 2px var(--color-star), -33vw 25vh 3px 2px var(--color-star), 50vw -22vh 1px 3px var(--color-star), -22vw 26vh 2px 1px var(--color-star),
+    -43vw 44vh 0px 3px var(--color-star), 34vw -8vh 3px 0px var(--color-star), -1vw -20vh 1px 2px var(--color-star), 40vw -3vh 3px 3px var(--color-star), -47vw 40vh 1px 3px var(--color-star), 31vw 48vh 1px 3px var(--color-star),
+    1vw 37vh 3px 0px var(--color-star), -13vw -12vh 0px 2px var(--color-star), -9vw 34vh 1px 3px var(--color-star), -29vw 48vh 0px 2px var(--color-star), -48vw -41vh 3px 3px var(--color-star), 35vw 40vh 3px 1px var(--color-star),
+    -11vw -38vh 2px 0px var(--color-star), 37vw -4vh 1px 2px var(--color-star), 39vw -27vh 0px 1px var(--color-star), 20vw 48vh 2px 2px var(--color-star), 1vw 38vh 2px 1px var(--color-star), 21vw -3vh 3px 0px var(--color-star),
+    -43vw -1vh 3px 3px var(--color-star), -44vw -15vh 0px 0px var(--color-star), -40vw -27vh 0px 3px var(--color-star), 27vw -33vh 2px 0px var(--color-star), -47vw 47vh 1px 0px var(--color-star), 0vw 25vh 2px 0px var(--color-star),
+    -29vw -37vh 2px 3px var(--color-star), -17vw -35vh 1px 1px var(--color-star), 31vw 28vh 3px 3px var(--color-star), -14vw 28vh 2px 1px var(--color-star), 13vw -9vh 2px 0px var(--color-star), -14vw -8vh 1px 2px var(--color-star),
+    25vw -9vh 0px 0px var(--color-star), 40vw -3vh 0px 1px var(--color-star), 49vw -39vh 0px 0px var(--color-star), -19vw 22vh 2px 0px var(--color-star), -32vw 16vh 2px 3px var(--color-star), -41vw -33vh 1px 1px var(--color-star),
+    45vw -41vh 2px 0px var(--color-star), -14vw -9vh 3px 2px var(--color-star), 48vw 36vh 0px 1px var(--color-star), -7vw -19vh 0px 0px var(--color-star), -30vw -23vh 3px 2px var(--color-star), -46vw -35vh 1px 3px var(--color-star),
+    -12vw -47vh 1px 0px var(--color-star), 27vw 40vh 3px 2px var(--color-star), 50vw -30vh 1px 1px var(--color-star), 41vw 30vh 0px 0px var(--color-star), -18vw -20vh 1px 1px var(--color-star), 21vw 45vh 2px 1px var(--color-star),
+    -37vw -31vh 1px 2px var(--color-star), -30vw 35vh 2px 0px var(--color-star), -41vw -48vh 0px 3px var(--color-star), 33vw 30vh 3px 3px var(--color-star), 34vw 44vh 3px 1px var(--color-star), -3vw 14vh 0px 1px var(--color-star),
+    0vw -9vh 0px 3px var(--color-star), -9vw -34vh 1px 1px var(--color-star), -21vw -24vh 1px 0px var(--color-star), 19vw 42vh 2px 0px var(--color-star), -7vw 15vh 3px 1px var(--color-star), -35vw -3vh 0px 1px var(--color-star),
+    28vw 20vh 0px 1px var(--color-star), -15vw 4vh 2px 0px var(--color-star), 9vw -38vh 1px 1px var(--color-star), -20vw 4vh 0px 3px var(--color-star), -25vw 39vh 0px 2px var(--color-star), 41vw 49vh 1px 2px var(--color-star),
+    -29vw 32vh 0px 0px var(--color-star), -26vw 41vh 1px 3px var(--color-star), 4vw -15vh 3px 1px var(--color-star), 19vw 6vh 0px 2px var(--color-star), -20vw -47vh 2px 0px var(--color-star);
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
+
 nav {
   grid-column: 1 / 13;
   height: 69px;
@@ -13,13 +80,11 @@ nav {
 main {
   grid-column: 1 / 13;
   height: 618px;
-  background-color: purple;
 }
 
 footer {
   grid-column: 1 / 13;
   height: 216px;
-  background-color: rgb(0, 119, 128);
 }
 
 @media (min-width: 768px) {
